package edu.fiuba.algo3.modelo.Entidad.Vida;

public class Normal extends Vida {

    public Normal(int cantVida) {
        super(cantVida);
    }

    @Override
    public void regenerar() {

    }
}
