package edu.fiuba.algo3.modelo.Entidad.Vida;

public class SinEscudo extends Defensa {

    public SinEscudo() {
        super(0);
    }

    @Override
    public void regenerar() {
    }
}
